Bump JDK to 16