@@ -6,7 +6,7 @@ plugins {
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(14)
+        languageVersion = JavaLanguageVersion.of(16)
     }
 }
 
@@ -106,11 +106,6 @@ sourceSets {
             srcDir "src${File.separator}main${File.separator}generatedJava"
         }
     }
-}
-
-
-tasks.withType(JavaCompile) {
-    options.compilerArgs += "--enable-preview"
 }
 
 wrapper {
